--- a/index.html
+++ b/index.html
@@ -6,12 +6,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="author" content="ThemeZaa">
         <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1" />
-        <meta name="description" content="Litho is a clean and modern design, BootStrap 5 responsive, business and portfolio multipurpose HTML5 template with 37+ ready homepage demos.">
+        <meta name="description" content="WAXTON | Identificamos un mercado que necesitaba del abastecimiento de cajas enceradas para la exportación, caracterizado por la calidad en el servicio, el trato al cliente y precios competitivos, lo que poco a poco nos llevó a ofertar un servicio de logística integral para la producción y entrega de las cajas">
         <!-- favicon icon -->
         <link rel="shortcut icon" href="images/favicon.png">
-        <link rel="apple-touch-icon" href="images/apple-touch-icon-57x57.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
         <!-- style sheets and font icons  -->
         <link rel="stylesheet" type="text/css" href="css/font-icons.min.css">
         <link rel="stylesheet" type="text/css" href="css/theme-vendors.min.css">
@@ -41,7 +38,7 @@
                         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                             <ul class="navbar-nav alt-font">
                                 <li class="nav-item  ">
-                                    <a href="#inicio" class="nav-link">INICIÓ</a>
+                                    <a href="#inicio" class="nav-link">INICIO</a>
                                 </li>
                                 <li class="nav-item  ">
                                     <a href="#nosotros" class="nav-link">NOSOTROS</a>
