--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                             <div class="swiper-wrapper">
                                 <!-- start slider item -->
-                                <div class="swiper-slide cover-background" style="background-image:url('images/slider/slider_1.jpg');">
+                                <div class="swiper-slide cover-background" style="background-image:url('images/slider/slider_1.png');">
                                     <!-- <div class="container h-100">
                                         <div class="row justify-content-left h-100">
                                             <div class="col-12 col-xl-5 col-sm-7 d-flex flex-column justify-content-center text-center align-items-center  h-100">
@@ -227,25 +227,25 @@
                     </div>
                 </div>
                 <div class="container padding-ten-top">
-                    <div class="row row-cols-2 row-cols-lg-4 row-cols-sm-2 client-logo-style-03 align-items-flex-end row-gap-3rem">
+                    <div class="row bg-client-blue2 border-radius-25px row-cols-2 row-cols-lg-4 row-cols-sm-2 align-items-center row-gap-3rem padding-30px-all">
                         <!-- start client logo item -->
                         <div class="col text-center sm-no-margin wow animate__fadeIn" data-wow-delay="0.2s">
-                            <a href="#" class="client-logo"><img class="w-120px-responsive" alt="" src="images/empresas/juanFish.png"></a>
+                            <a href="#" class="client-logo"><img class="w-120px-responsive" alt="" src="images/empresas/empresa_1.png"></a>
                         </div>
                         <!-- end client logo item -->
                         <!-- start client logo item -->
                         <div class="col text-center sm-no-margin wow animate__fadeIn" data-wow-delay="0.4s">
-                            <a href="#" class="client-logo"><img class="w-120px-responsive" alt="" src="images/empresas/Fish.png"></a>
+                            <a href="#" class="client-logo"><img class="w-120px-responsive" alt="" src="images/empresas/empresa_2.png"></a>
                         </div>
                         <!-- end client logo item -->
                         <!-- start client logo item -->
                         <div class="col text-center sm-no-margin wow animate__fadeIn" data-wow-delay="0.6s">
-                            <a href="#" class="client-logo"><img class="w-120px-responsive" alt="" src="images/empresas/global_fisheries.png"></a>
+                            <a href="#" class="client-logo"><img class="w-120px-responsive" alt="" src="images/empresas/empresa_3.png"></a>
                         </div>
                         <!-- end client logo item -->
                         <!-- start client logo item -->
                         <div class="col text-center sm-no-margin wow animate__fadeIn" data-wow-delay="0.8s">
-                            <a href="#" class="client-logo"><img class="w-70px-responsive" alt="" src="images/empresas/donsaro-seafood.png"></a>
+                            <a href="#" class="client-logo"><img class="" alt="" src="images/empresas/empresa_4.png"></a>
                         </div>
                         <!-- end client logo item -->
                     </div>
@@ -375,8 +375,6 @@
                                 <div class="position-relative container-product md-padding-4-rem-lr">
                                     <img loading="lazy" src="images/cards/card_4.png" alt="card 4">
                                     <div class="bg-client-blue4 text-small font-weight-500 alt-font text-blue-client text-uppercase position-absolute bottom-minus-25px  padding-5px-tb padding-20px-lr text-button-card2 border-radius-25px">Caja <br> 55 Lb</div>
-
-                                    
                                 </div>
                             </div>
                         </div>
@@ -392,7 +390,7 @@
                             <div class="swiper-slide box-shadow-small ">
                                 <div class="position-relative container-product md-padding-4-rem-lr">
                                     <img loading="lazy" class="border-radius-25px" src="images/cards/card_6.png" alt="card 6">
-                                    <div class="bg-client-blue4 text-small font-weight-500 alt-font text-blue-client text-uppercase position-absolute bottom-minus-25px  padding-5px-tb padding-20px-lr text-button-card2 border-radius-25px">Caja<br> Especial</div>
+                                    <div class="bg-client-blue4 text-small font-weight-500 alt-font text-blue-client text-uppercase position-absolute bottom-minus-25px  padding-5px-tb padding-20px-lr text-button-card2 border-radius-25px">Tapa Extendida<br> 55lb</div>
                                 </div>
                             </div>
                         </div>
@@ -469,7 +467,7 @@
                                             <span class="services-one-title">
                                                 RECEPCIÓN <br> DEL PEDIDO
                                             </span>
-                                            <img src="images/icons/Arrow_2.png" alt="Arrow_2">
+                                            <img class="img-responsive-none" src="images/icons/Arrow_2.png" alt="Arrow_2">
                                         </div>
                                         <div class="col-xl-2 image-dnone">
                                             <img src="images/icons/Arrow_2.png" alt="Arrow_2">
@@ -494,7 +492,7 @@
                                             <span class="services-one-title">
                                                 ALMACENAMIENTO
                                             </span>
-                                            <img src="images/icons/Arrow_2.png" alt="Arrow_2">
+                                            <img class="img-responsive-none" src="images/icons/Arrow_2.png" alt="Arrow_2">
                                         </div>
                                         <div class="col-xl-2 image-dnone">
                                             <img src="images/icons/Arrow_2.png" alt="Arrow_2">
@@ -519,7 +517,7 @@
                                             <span class="services-one-title">
                                                 PREPARACIÓN <br> Y ENVÍO DEL PEDIDO
                                             </span>
-                                            <img src="images/icons/Arrow_2.png" alt="Arrow_2">
+                                            <img class="img-responsive-none" src="images/icons/Arrow_2.png" alt="Arrow_2">
                                         </div>
                                         <div class="col-xl-2 image-dnone">
                                             <img src="images/icons/Arrow_2.png" alt="Arrow_2">
@@ -544,7 +542,7 @@
                                             <span class="services-one-title">
                                                 GESTIÓN DE <br> DEVOLUCIONES
                                             </span>
-                                            <img src="images/icons/Arrow_2.png" alt="Arrow_2">
+                                            <img class="img-responsive-none" src="images/icons/Arrow_2.png" alt="Arrow_2">
 
                                         </div>
                                         <div class="col-xl-2 image-dnone">
