--- a/index_eng.html
+++ b/index_eng.html
@@ -318,7 +318,7 @@
                     <div class="row justify-content-center">
                         <div class="col-xl-12 ">
                             <h2 class="title-productos-cards">STANDARD WAXED BOXES</h2>
-                            <h2 class="title-productos-cards2">CAJAS ENCERADAS ESTÁNDAR</h2>
+                            <h2 class="title-productos-cards2">STANDARD WAXED BOXES</h2>
                             
                         </div>
                     </div>
@@ -356,7 +356,7 @@
                 <div class="container padding-ten-top">
                     <div class="col-xl-12 ">
                         <h2 class="title-productos-cards">CUSTOM BOXES</h2>
-                        <h2 class="title-productos-cards2">CAJAS PERSONALIZADAS</h2>
+                        <h2 class="title-productos-cards2">CUSTOM BOXES</h2>
                     </div>
                 </div>
                 <div class="container ">
@@ -397,7 +397,7 @@
                 <div class="container padding-ten-top">
                     <div class="col-xl-12 ">
                         <h2 class="title-productos-cards">AMERICAN BOXES</h2>
-                        <h2 class="title-productos-cards2">CAJAS ENCERADAS AMERICANAS</h2>
+                        <h2 class="title-productos-cards2">AMERICAN BOXES</h2>
                     </div>
                 </div>
                 <div class="container ">
