--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
                             <div class="swiper-wrapper">
                                 <!-- start slider item -->
-                                <div class="swiper-slide cover-background" style="background-image:url('images/slider/slider_1.jpg');">
+                                <div class="swiper-slide cover-background" style="background-image:url('images/slider/slider-1.png');">
                                     <!-- <div class="container h-100">
                                         <div class="row justify-content-left h-100">
                                             <div class="col-12 col-xl-5 col-sm-7 d-flex flex-column justify-content-center text-center align-items-center  h-100">
